# gittr

./: .gitignore  Cargo.toml  LICENSE  README.md
gittr-ssh-auth/: Cargo.toml
gittr-web/: Cargo.toml  index.css  index.html
gittr-web/src/: app.module.css  main.rs
gittr-web/src/components/: mod.rs
gittr-web/src/components/gittr/: main_header.module.css  main_header.rs  mod.rs
gittr-web/src/components/primitives/: link.module.css  link.rs
gittr-web/src/views/: home.rs
src/: main.rs
ssh-auth-bin/: Cargo.toml
