[workspace]
resolver = "3"
members = ["ssh-auth-bin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lucas Morais <lucas.morais@lsconsult.tech>"]
categories = ["development-tools", "network-programming"]
keywords = ["git", "self-hosted", "server"]
repository = "https://github.com/lmorais-dev/gittr"
homepage = "https://github.com/lmorais-dev/gittr"
documentation = "https://github.com/lmorais-dev/gittr/wiki"
readme = "README.md"
license = "MIT"
publish = true

[package]
name = "gittr"
description = "Gittr is a self-hosted git platform for small, stealthy teams."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
tokio = { version = "=1.43.0", features = ["full"] }

bollard = { version = "=0.18.1" }

toml = { version = "*" }
