[workspace]
resolver = "3"
members = ["gittr-ssh-auth", "gittr-web"]
exclude = ["www"]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Lucas Morais <lucas.morais@lsconsult.tech>"]
categories = ["development-tools", "network-programming"]
keywords = ["git", "self-hosted", "server"]
repository = "https://github.com/lmorais-dev/gittr"
homepage = "https://github.com/lmorais-dev/gittr"
documentation = "https://github.com/lmorais-dev/gittr/wiki"
readme = "README.md"
license = "MIT"
publish = true

[workspace.dependencies]
tokio = { version = "=1.43.0", features = ["full"] }

axum = { version = "=0.8.1" }
reqwest = { version = "=0.12.12", features = ["json"] }

leptos = { version = "=0.7.7", features = ["csr"] }
leptos_router = { version = "=0.7.7" }
stylance = { version = "=0.5.5" }

serde = { version = "=1.0.218", features = ["derive"] }
serde_json = { version = "=1.0.140", features = ["indexmap"] }
toml = { version = "=0.8.20", features = ["indexmap", "preserve_order"] }
hex = { version = "=0.4.3", features = ["serde"] }
base32 = { version = "=0.5.1" }

uuid = { version = "=1.15.1", features = ["serde", "v4", "v7"] }
chrono = { version = "=0.4.40", features = ["serde"] }

sqlx = { version = "=0.8.3", features = ["sqlite", "chrono", "uuid", "runtime-tokio", "tls-rustls-ring"] }

rand = { version = "=0.9.0", features = ["serde"] }
blake3 = { version = "=1.6.1", features = ["serde", "zeroize"] }
argon2 = { version = "=0.5.3", features = ["simple", "zeroize"] }
chacha20poly1305 = { version = "=0.10.1" }

tracing = { version = "=0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

dotenvy = { version = "=0.15.7" }
color-eyre = { version = "=0.6.3" }
thiserror = { version = "=2.0.12" }

[package]
name = "gittr"
description = "Gittr is a self-hosted git platform for small, stealthy teams."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
tokio = { workspace = true }

axum = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }

sqlx = { workspace = true }

rand = { workspace = true }
argon2 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dotenvy = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
