[package]
name = "gittr-ssh-auth"
description = "Helper program for SSH to bridge authentication between SSH and the gittr backend."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "gittr-ssh-auth"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }

reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
